spacing fix

--- a/src/styles/mesca2.css
+++ b/src/styles/mesca2.css
@@ -1122,7 +1122,8 @@ ul.error-detail .text-danger {
     display: grid;
     grid-template-columns: 1fr 1fr;
     margin-top: 3px;
-    gap: 3px;
+    gap: 10px;
+    grid-gap: 10px;
   }
 
   .product-selection .where-to-buy button {
